--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "class-validator": "^0.14.0",
     "moment": "^2.29.4",
     "passport-jwt": "^4.0.1",
+    "prisma-decimal": "^1.1.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sharp": "^0.31.3",
