--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
+  "engines": {
+    "node": "19.4.0"
+  },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.271.0",
     "@nestjs/common": "^9.3.5",
