--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sharp": "^0.31.3",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "web3": "^1.10.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
