--- a/package.json
+++ b/package.json
@@ -47,13 +47,16 @@
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "ethereumjs-wallet": "^1.0.2",
+    "ethers": "^6.3.0",
     "moment": "^2.29.4",
     "passport-jwt": "^4.0.1",
     "prisma-decimal": "^1.1.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sharp": "^0.31.3",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "web3": "^1.10.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
