--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.271.0",
+    "@elusiv/sdk": "^0.1.13",
     "@nestjs/common": "^9.3.5",
     "@nestjs/config": "^2.3.0",
     "@nestjs/core": "^9.3.5",
@@ -33,6 +34,7 @@
     "@nestjs/passport": "^9.0.1",
     "@nestjs/platform-express": "^9.3.5",
     "@nestjs/swagger": "^6.2.1",
+    "@noble/ed25519": "^2.0.0",
     "@prisma/client": "^4.9.0",
     "@solana/wallet-adapter-base": "^0.9.22",
     "@solana/wallet-adapter-wallets": "^0.19.15",
